[package]
name = "tm1637"
version = "0.1.0"
authors = [
    "Sergey Vakhurin <igelbox@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
]
description = "A platform agnostic driver to a LED-display powered by the TM1637 chip"
keywords = ["embedded", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
repository = "https://github.com/igelbox/tm1637-rs"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[[example]]
name = "main"

[dev-dependencies]
embedded-hal = { version = "0.2.3" }
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal" }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
